hphp/test/zend/bad/ext/mbstring/tests/overload01.php.skipif
<?php 
	extension_loaded('mbstring') or die('skip mbstring not available'); 
	if (!function_exists("mail")) {
		die('skip mail() function is not available.');
	}
?>